# manytris

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.game  Dockerfile.manager  README.Docker.md  build_dev_manager.sh  build_dev_server.sh  build_prod_manager.sh  build_prod_server.sh  compose.yaml  game-server-pod.yaml  manager-pod.yaml  manager-role.yaml  run_local.sh  tunnel.sh
.cargo/: config.toml
docker/: Dockerfile.build_deps  Dockerfile.game_runtime  Dockerfile.game_runtime_deps  Dockerfile.manager  Dockerfile.manager_deps  Makefile
manytris_bevy/: Cargo.toml
manytris_bevy/src/: assets.rs  block_render.rs  bot_input.rs  cli_options.rs  connecting_screen.rs  field_blocks.rs  game_container.rs  garbage_counter.rs  input.rs  lib.rs  main_menu.rs  net_client.rs  net_game_control_manager.rs  net_listener.rs  net_protocol.rs  pause_menu.rs  plugins.rs  root.rs  scoreboard.rs  shape_producer.rs  states.rs  stats_server.rs  system_sets.rs  tick_limiter.rs  window_blocks.rs
manytris_bot/: Cargo.toml
manytris_bot/src/: bot_cpu.rs  bot_player.rs  bot_shader.rs  bot_start_positions.rs  compute_types.rs  lib.rs
manytris_bot_demo/: Cargo.toml
manytris_bot_demo/src/: main.rs  tests.rs
manytris_bot_metal/: Cargo.toml
manytris_bot_metal/src/: lib.rs
manytris_bot_vulkan/: Cargo.toml
manytris_bot_vulkan/shaders/: bot.glsl  common.glsl  eval_moves.glsl  make_configs.glsl
manytris_bot_vulkan/src/: lib.rs
manytris_core/: Cargo.toml
manytris_core/src/: bitmap_field.rs  consts.rs  field.rs  game_state.rs  lib.rs  shape_bag.rs  shapes.rs  tetromino.rs  upcoming.rs
manytris_game_manager/: Cargo.toml
manytris_game_manager/src/: k8s_commands.rs  lib.rs  main.rs  port_forward.rs
manytris_game_manager_proto/: Cargo.toml
manytris_game_manager_proto/src/: lib.rs
src/: assets.rs  bot_player.rs  bot_shader.metal  bot_shader.metallib  bot_shader.rs  bot_start_positions.rs  cli_options.rs  compute_types.rs  consts.rs  entities.rs  field.rs  field_rendering.rs  game_state.rs  input.rs  lib.rs  main.rs  preview_entities.rs  root_entity.rs  shapes.rs  system_sets.rs  tetromino.rs  upcoming.rs
src/bot/: bot_player.rs  bot_shader.metallib  bot_shader.rs  bot_start_positions.rs  build_shader.sh  compute_types.rs  mod.rs
src/plugins/: assets.rs  block_render.rs  bot_input.rs  entities.rs  field_blocks.rs  game_container.rs  garbage_counter.rs  input.rs  main_menu.rs  mod.rs  net_client.rs  net_game_control_manager.rs  net_listener.rs  net_protocol.rs  preview_entities.rs  root.rs  root_entity.rs  scoreboard.rs  shape_producer.rs  states.rs  system_sets.rs  window_blocks.rs
