[workspace]
members = [ "manytris_bevy", "manytris_bot","manytris_core", "manytris_game_manager"]

[workspace.dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
bevy = "0.13.0"
bevy_mod_reqwest = "0.18.0"
clap = { version = "4.5.7", features = ["derive"] }
enum-iterator = "2.0.0"
enum-map = "2.7.3"
ewebsock = "0.5.0"
gcp_auth = "0.12.3"
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = "0.97.0"
ordered-float = "4.2.2"
rand = "0.8.5"
rmp-serde = "1.2.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tungstenite = "0.21.0"
url = "2.5.0"
uuid = { version = "1.10.0", features = ["js", "v4"] }

# Mac-specific dependencies
genetic_algorithm = "0.8.2"
metal = "0.29.0"


[package]
name = "manytris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manytris_bevy = {path = "manytris_bevy"}
clap = {workspace = true}


[target.'cfg(target_os = "macos")'.dependencies]
manytris_bevy = {path = "manytris_bevy", features=["bot"]}
