[workspace]
members = ["manytris_bevy", "manytris_bot", "manytris_bot_demo", "manytris_bot_metal", "manytris_bot_vulkan", "manytris_core", "manytris_game_manager", "manytris_game_manager_proto"]

[workspace.dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
bevy = "0.15.0"
bevy_mod_reqwest = "0.18.0"
bytemuck = {version = "1.21.0", features = ["derive"]}
clap = { version = "4.5.7", features = ["derive"] }
derive_more = {version = "1.0.0", features = ["display", "error"]}
enum-iterator = "2.0.0"
enum-map = "2.7.3"
ewebsock = "0.5.0"
gcp_auth = "0.12.3"
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = "0.97.0"
ordered-float = "4.2.2"
pretty_assertions = "1.4.1"
rand = "0.8.5"
rmp-serde = "1.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.41.1", features = ["full"] }
tungstenite = "0.21.0"
url = "2.5.0"
uuid = { version = "1.10.0", features = ["js", "v4"] }
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"

# Mac-specific dependencies
genetic_algorithm = "0.8.2"
metal = "0.29.0"


[package]
name = "manytris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manytris_bevy = {path = "manytris_bevy"}
clap = {workspace = true}


[target.'cfg(target_os = "macos")'.dependencies]
manytris_bevy = {path = "manytris_bevy", features=["bot_metal"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
manytris_bevy = {path = "manytris_bevy", features=["bot_vulkan"]}

