[package]
name = "manytris_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
manytris_core = {path = "../manytris_core"}
manytris_game_manager_proto = {path = "../manytris_game_manager_proto"}
manytris_bot = {path = "../manytris_bot", optional = true}
manytris_bot_metal = {path = "../manytris_bot_metal", optional = true}
manytris_bot_vulkan = {path = "../manytris_bot_vulkan", optional = true}

axum = {workspace = true, optional = true}
bevy_webserver = {workspace = true, optional = true}

anyhow = {workspace = true}
bevy = {workspace = true}
bevy_defer = {workspace = true}
bevy_framepace = {workspace = true}
bevy_mod_reqwest = {workspace = true}
clap = {workspace = true}
ewebsock = {workspace = true}
rmp-serde = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
spin_sleep = {workspace = true}
tungstenite = {workspace = true}
url = {workspace = true}
uuid = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {workspace = true, features = ["trace_tracy"] }

[features]
bot_vulkan = ["bot", "dep:manytris_bot_vulkan"]
bot = ["dep:manytris_bot"]
stats_server = ["dep:axum", "dep:bevy_webserver"]
