[package]
name = "manytris_game_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = {workspace = true}
k8s-openapi = {workspace = true}
tokio = {workspace = true}
clap = {workspace = true}
anyhow = {workspace = true}
axum = {workspace = true}
serde = {workspace = true}
gcp_auth = {workspace = true}