[package]
name = "manytris_game_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
manytris_game_manager_proto = {path = "../manytris_game_manager_proto"}

anyhow = {workspace = true}
axum = {workspace = true}
clap = {workspace = true}
futures = {workspace = true}
gcp_auth = {workspace = true}
k8s-openapi = {workspace = true}
kube = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
